--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <header id="header">
     <!--  Brand Logo  -->
     <a class="nav-brand" href="" target="">
-      <img id="header-img" src="/imgs/logoAutofix.png" alt="logo">
+      <img id="header-img" src="https://firebasestorage.googleapis.com/v0/b/poli-waiter.appspot.com/o/images%2FlogoAutofix.png?alt=media&token=2ac7250f-633a-45a5-8eaf-dab46db15d55" alt="logo">
     </a>
     
     <!--  Toggle Menu for Mobile  -->
